feat(rules)!: generalize SH004 checkbox-state rule
Refactor SH004 to use ordered state conditions, support both checked and unchecked enforcement, and improve reporting/docs/tests around the new checkbox-state rule.

Bump package version to 0.2.0 and clean dist before build to avoid stale release artifacts.

BREAKING CHANGE: SH004 config option check_fenced_text has been renamed to scan_fenced_code.

--- a/docs/rules/SH002.md
+++ b/docs/rules/SH002.md
@@ -28,3 +28,7 @@ with:
 {demo}:
   file.txt: File note
 ```
+
+## Configuration
+
+- `annotations_file` (`string`, optional): explicit path to annotation YAML.
