--- a/docs/rules/SH003.md
+++ b/docs/rules/SH003.md
@@ -27,3 +27,7 @@ for:
 ```
 
 where `sample.txt` exists in the rendered tree block.
+
+## Configuration
+
+- `annotations_file` (`string`, optional): explicit path to annotation YAML.
