feat(sh004): support dot-path frontmatter state matching
Add nested frontmatter lookup for SH004 conditions via dot-path keys and typed scalar values.

Ship JSON schema for SH004 config and document matching semantics plus editor setup.

--- a/docs/rules/SH004.md
+++ b/docs/rules/SH004.md
@@ -35,8 +35,25 @@ lifecycle: draft
 
 - `scan_fenced_code` (`boolean`, default `false`): include task checkboxes inside fenced code blocks.
 - `conditions` (`array`): ordered condition list; first matching condition wins.
-  - `states` (`object`): frontmatter key to expected value (`string` or `string[]`).
+  - `states` (`object`): frontmatter key to expected value (`string`, `number`, `boolean`, or array of those).
+    - Use dot-path keys for nested fields (example: `compliance.profiles.fisma.certification`).
   - `checked` (`boolean`): expected checkbox state when the condition matches.
+
+### Condition Logic
+
+Matching semantics are:
+
+- `conditions`: logical OR (first matching condition wins).
+- keys inside `states`: logical AND (every key in that condition must match).
+- values for each key (`[...]`): logical OR (any listed value matches).
+
+Equivalent expression for one condition:
+
+`(status in [...]) AND (state_reason in [...]) AND ...`
+
+Equivalent expression for multiple conditions:
+
+`condition_1 OR condition_2 OR condition_3 ...`
 
 ```yaml
 scan_fenced_code: false
@@ -44,6 +61,10 @@ conditions:
   - states:
       status: ready-for-review
       state_reason: completed
+    checked: true
+  - states:
+      compliance.profiles.fisma.certification: true
+      status: completed
     checked: true
   - states:
       lifecycle: draft
